Fix color flickering on grid animation

--- a/src/orb/index.css
+++ b/src/orb/index.css
@@ -9,7 +9,5 @@
       color: rgb(128, 0, 0);
     }
     100% {
-      background-color: white;
-      color: rgb(0, 0, 0);
     }
 }
